Created ServerModule1 and Home; Edited standard-page.html, theme/parameters.yaml and Form1

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -5,7 +5,7 @@
     
     <div class="left-nav">
       <div class="logo" anvil-slot="logo">
-        <div class="placeholder logo-placeholder anvil-designer-only" anvil-if-slot-empty="logo" anvil-drop-here>Add your logo here</div>
+        <div class="placeholder logo-placeholder anvil-designer-only" anvil-if-slot-empty="logo" anvil-drop-here>_/theme/images%20(7).jpg</div>
       </div>
       <div class="left-nav-container anvil-measure-this" anvil-slot-repeat="left-nav" anvil-drop-container=">.anvil-container"></div>
       <div class="left-nav-placeholder anvil-designer-only" anvil-if-slot-empty="left-nav" anvil-drop-slot="left-nav">
